tests/baselines/reference/moduleSharesNameWithImportDeclarationInsideIt3.errors.txt
error TS-1: Pre-emit (2) and post-emit (3) diagnostic counts do not match! This can indicate that a semantic _error_ was added by the emit resolver - such an error may not be reflected on the command line or in the editor, but may be captured in a baseline here!
tests/cases/compiler/moduleSharesNameWithImportDeclarationInsideIt3.ts(10,12): error TS2300: Duplicate identifier 'M'.
tests/cases/compiler/moduleSharesNameWithImportDeclarationInsideIt3.ts(11,12): error TS2300: Duplicate identifier 'M'.


!!! error TS-1: Pre-emit (2) and post-emit (3) diagnostic counts do not match! This can indicate that a semantic _error_ was added by the emit resolver - such an error may not be reflected on the command line or in the editor, but may be captured in a baseline here!
!!! related TS-1: The excess diagnostics are:
!!! related TS2749 tests/cases/compiler/moduleSharesNameWithImportDeclarationInsideIt3.ts:10:16: 'Z.M' refers to a value, but is being used as a type here. Did you mean 'typeof Z.M'?
==== tests/cases/compiler/moduleSharesNameWithImportDeclarationInsideIt3.ts (2 errors) ====
    module Z {
        export module M {
            export function bar() {
                return "";
            }
        }
        export interface I { }
    }
    module A.M {
        import M = Z.M;
               ~
!!! error TS2300: Duplicate identifier 'M'.
        import M = Z.I;
               ~
!!! error TS2300: Duplicate identifier 'M'.
    
        export function bar() {
        }
        M.bar(); // Should call Z.M.bar
    }